test/conformance/chainsaw/mutating-policies/context/globalcontextentry/pod-assert.yaml
kind: Pod
apiVersion: v1
metadata:
  name: test-pod
  namespace: test-globalcontext-apicall-mpol-ns
  labels:
    app: test-gce-mpol
spec:
  containers:
    - name: test-container
      image: public.ecr.aws/docker/library/nginx:latest
