test/conformance/chainsaw/mutating-policies/context/globalcontextentry/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mpol-globalcontextentry
spec:
  steps:
  - name: create configmap and globalcontextentry
    try:
    - apply:
        file: configmap.yaml
    - apply:
        file: gctxentry.yaml
    - assert:
        file: gctxentry.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-mutating-policy-ready
    use:
      template: ../../../_step-templates/mutating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: test-mpol-globalcontextentry
  - name: test pod mutation
    try:
    - create:
        file: pod.yaml
    - assert:
        file: pod-assert.yaml
